--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,43 +8,55 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  geometric_shapes
   geometry_msgs
+  geometric_shapes
   moveit_msgs
   moveit_ros_planning_interface
   roscpp
   std_msgs
-  # sensor_msgs
-  # tf
-  # tf_conversions
-  # object_detection
-  # visualization_msgs
-  # urdf_models
-  # cv_bridge
+  sensor_msgs
+  tf
+  tf_conversions
+  object_detection
+  visualization_msgs
+  urdf_models
+  grasp_and_place_msgs
+  cv_bridge
 )
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED)
-find_package(OpenCV REQUIRED)
+#find_package(OpenCV REQUIRED)
 
+###################################
+## catkin specific configuration ##
+###################################
+## The catkin_package macro generates cmake config files for your package
+## Declare things to be passed to dependent projects
+## INCLUDE_DIRS: uncomment this if you package contains header files
+## LIBRARIES: libraries you create in this project that dependent projects also need
+## CATKIN_DEPENDS: catkin_packages dependent projects also need
+## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS
     include
   LIBRARIES
     ${PROJECT_NAME}
   CATKIN_DEPENDS
-    geometric_shapes
     geometry_msgs
+    geometric_shapes
     moveit_msgs
     moveit_ros_planning_interface
     roscpp
     std_msgs
-    # sensor_msgs
-    # tf
-    # tf_conversions
-    # object_detection
-    # visualization_msgs
-    # cv_bridge
+    sensor_msgs
+    tf
+    tf_conversions
+    object_detection
+    visualization_msgs
+    urdf_models
+    grasp_and_place_msgs
+    cv_bridge
 #  DEPENDS system_lib
 )
 
@@ -54,6 +66,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
+# include_directories(include)
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
@@ -61,32 +74,87 @@ include_directories(
 )
 
 ## Declare a C++ library
-add_library(
-  ${PROJECT_NAME}
-)
-
-
-add_executable(miling_path_test src/milling_path.cpp)
-target_link_libraries(miling_path_test ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-# install(TARGETS ur3_milling DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-
-## Declare a C++ executable
-# add_executable(
-#   serial_stacking_node
-#   src/SerialStacking.cpp
-#   src/serial_stacking_node.cpp
+# add_library(
+#   ${PROJECT_NAME}
+#   src/GripperInterface.cpp
+#   src/GraspObject.cpp
+#   src/Object.cpp
+#   src/PlaceObject.cpp
+#   # src/regrip.cpp
 # )
 
+## Add cmake target dependencies of the library
+## as an example, code may need to be generated before libraries
+## either from message generation or dynamic reconfigure
+# add_dependencies(
+# grasp_and_place
+# object_detection_generate_messages_cpp
+# )
+
+## Declare a C++ executable
+add_executable(
+  milling_path
+  src/milling_path.cpp
+  # src/milling_path_node.cpp
+)
+target_link_libraries(
+  milling_path
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
+# add_executable(
+#   stack_each_node
+#   src/StackEach.cpp
+#   src/stack_each_node.cpp
+# )
+
+# add_executable(
+#   set_grasping_pose_node
+#   src/SetGraspingPose.cpp
+#   src/set_grasping_pose_node.cpp
+# )
+
+# add_executable(
+#   camera_calibration_node
+#   src/CameraCalibration.cpp
+#   src/camera_calibration_node.cpp
+# )
+
+# add_executable(
+#   object_tf_publisher
+#   src/ObjectTFPublisher.cpp
+# )
+
+
 ## Specify libraries to link a library or executable target against
+
+#
 # target_link_libraries(
+#   milling_path
 #   ${PROJECT_NAME}
 #   ${catkin_LIBRARIES}
-#   ${OpenCV_LIBRARIES}
 # )
 #
 # target_link_libraries(
-#   serial_stacking_node
+#   stack_each_node
 #   ${PROJECT_NAME}
 #   ${catkin_LIBRARIES}
-#)
+# )
+#
+# target_link_libraries(
+#   set_grasping_pose_node
+#   ${PROJECT_NAME}
+#   ${catkin_LIBRARIES}
+# )
+
+# target_link_libraries(
+#   camera_calibration_node
+#   ${PROJECT_NAME}
+#   ${catkin_LIBRARIES}
+# )
+
+# target_link_libraries(
+#   object_tf_publisher
+#   ${PROJECT_NAME}
+#   ${catkin_LIBRARIES}
+# )
