--- a/package.xml
+++ b/package.xml
@@ -28,6 +28,8 @@
   <build_depend>urdf_models</build_depend>
   <build_depend>opencv2</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>ur_msgs</build_depend>
+  
 
 
   <run_depend>geometry_msgs</run_depend>
@@ -46,5 +48,6 @@
   <run_depend>urdf_models</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>ur_msgs</run_depend>
 
 </package>
